2007-11-12 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/rucola_support/rc_app.rb,
	  lib/rucola/tasks/databases.rake,
	  lib/rucola/tasks/main.rake:

	- Add support for migrations and other AR tasks
	- main.rake now just sets environment variables and requires the initializer
	  to set the RUBYCOCOA_ENV and RUBYCOCOA_ROOT constants
	- fix how RCApp.app_name finds Info.plist
	- Make the initializer get the app name using RCApp.app_name
	  NB: This means requiring rucola/rucola_support/rc_app.rb from the
	      initializer
	- Add TODO to move the AR stuff to a plugin

2007-11-12 Eloy Duran <e.duran@superalloy.nl>

	For the love of Beer Driven Development, the big r100!

2007-11-12 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/info_plist.rb,
	  lib/rucola/rucola_support/rc_app.rb,
	  test/test_info_plist.rb,
	  test/test_rc_app.rb:

	Added Rucola::InfoPlist#app_name & Rucola::RCApp#app_name which return
	the CFBundleExecutable value from the Info.plist file.

2007-11-12 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  rucola_generators/document_model/document_model_generator.rb,
	  test/test_document_model_generator.rb:

	- The document_model_generator will not longer run if no extension is specified,
	  but rather display the usage banner.
	- Updated TODO.

2007-11-12 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb:

	- Aliased Notifications #notify_on to #when.
	- Cleaned TODO.

2007-11-11 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  rucola_generators/activerecord_model/activerecord_model_generator.rb,
	  rucola_generators/activerecord_model/templates/database.yml.erb,
	  test/test_activerecord_model_generator.rb:

	- Add a config/database.yml when generating a model if it doesn't exists

2007-11-11 Chris McGrath <chris@octopod.info>

	* .gitignore,
	  Manifest.txt,