@@ -48,6 +48,13 @@ module Rucola
           (@_notification_prefixes ||= {}).merge! prefixes
         end
         
+        # Creates a notification and posts it to the reciever
+        def fire_notification(notification, obj)
+          notification_name = resolve_notification_name(notification)
+          OSX::NSNotificationCenter.defaultCenter.postNotificationName_object(notification_name, obj)        
+        end
+        alias_method :post_notification, :fire_notification
+        
         # Registers the object for the given notification and executes the given block when the
         # notification is posted to the OSX::NSNotificationCenter.defaultCenter.
         #
@@ -68,33 +75,8 @@ module Rucola
         #
         # You can even register shortcut prefixes. See +notification_prefix+.
         def notify_on(notification, &block)
-          notification_name = notification
           
-          if notification_name.is_a? Symbol
-            notification_name = notification_name.to_s
-            
-            # first check if this notification_name uses a shortcut prefix
-            splitted_notification_name = notification_name.split('_')
-            prefix = splitted_notification_name.first.to_sym
-            if @_notification_prefixes and @_notification_prefixes.has_key? prefix
-              notification_name = @_notification_prefixes[prefix].to_s << '_' << splitted_notification_name[1..-1].join('_')
-            end
-
-            begin
-              # try with only Notification appended
-              notification_name = notification_name.camel_case << 'Notification'
-              OSX.const_get(notification_name)
-            rescue NameError
-              begin
-                # then try with NS prepended
-                notification_name = 'NS' << notification_name
-                OSX.const_get(notification_name)
-              rescue NameError
-                raise NameError, "Unable to find the notification corresponding to :#{notification}"
-              end
-            end
-          end
-          
+          notification_name = resolve_notification_name(notification)
           method_name = "_handle_#{notification_name.snake_case}".to_sym
           
           # define the handle method
@@ -143,6 +125,41 @@ module Rucola
         def notify(method_to_notify, options = {})
           @_registered_notifications ||= {}
           @_registered_notifications[options[:when]] = method_to_notify
+        end
+        
+        protected
+
+        # Given a symbol, attempt to map it to an NSNoficication, otherwise 
+        # return the symbol if nothing is found.
+        #
+        #    :app_finished_launching => NSApplicationFinishLaunchingNotification
+        def resolve_notification_name(name)
+          return name if name.is_a?(String)
+          notification_name = name.to_s
+
+          # first check if this notification_name uses a shortcut prefix
+          split_notification_name = notification_name.split('_')
+          prefix = split_notification_name.first.to_sym
+          if @_notification_prefixes and @_notification_prefixes.has_key? prefix
+            notification_name = @_notification_prefixes[prefix].to_s << '_' << split_notification_name[1..-1].join('_')
+          end
+
+          begin
+            # try with only Notification appended
+            notification_name = notification_name.camel_case << 'Notification'
+            OSX.const_get(notification_name)
+            return notification_name
+          rescue NameError
+            # then try with NS prepended
+            begin
+              notification_name = 'NS' << notification_name
+              OSX.const_get(notification_name)
+              return notification_name
+            rescue 
+              
+            end
+          end
+          return name
         end
         
       end
